feat(Y2025D02): completed